fix: restore the guard's tripwire, record why lint's exports warnings stay
Second review of the JPMS work:

* Adding main's module descriptor to `expected` disarmed the guard's
  empty check in the two modules that carry one — the union is non-empty
  from that single file, so a collapsed non-main read would have passed
  silently in push2u-core, which holds the published conformance kit and
  44 non-main sources. The check tests `nonMain` again; both branches
  verified reachable in a module that has a descriptor.

* ADR-014 claimed `javac -Xlint:exports` "names exactly this" about
  java.net.http. It no longer names it — what it reports now is eleven
  `class Nullable in module org.jspecify is not indirectly exported`
  warnings. Following them is a trap: `requires static transitive
  org.jspecify` silences all eleven and breaks every module-path consumer
  that does not ship JSpecify (`module not found: org.jspecify` at the
  CONSUMER's compile; measured both ways). The warnings are accepted, and
  the ADR now says so, because otherwise the next reader "fixes" them.

* The implement skill still told an implementing agent that the gate
  catches an unmarked new package — true only for main, and that sentence
  is what produced the missing @NullMarked the previous commit fixed. It
  now names both main-only blind spots: @NullMarked in testFixtures, and
  the exports line a new public package needs.

* README overstated the JSpecify story in both directions: compiling
  against push2u never needs the jar (annotations are readable from the
  class files), and having it on the module path is not enough at runtime
  — a `static` requires needs --add-modules to resolve.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>